@@ -75,7 +75,6 @@ void LayoutTestController::reset()
     m_webHistory = 0;
     qt_dump_editing_callbacks(false);
     qt_dump_resource_load_callbacks(false);
-    emit hidePage();
 }
 
 void LayoutTestController::processWork()
@@ -176,11 +175,6 @@ void LayoutTestController::notifyDone()
 int LayoutTestController::windowCount()
 {
     return m_drt->windowCount();
-}
-
-void LayoutTestController::display()
-{
-    emit showPage();
 }
 
 void LayoutTestController::clearBackForwardList()
